Check button behavior fixes, div content zoom-in alterations, long-text overflow handling

--- a/views/static/css/approver.css
+++ b/views/static/css/approver.css
@@ -273,14 +273,16 @@ header{
 #main-content{
 /*    position: fixed;*/
     width: 500px;
-    overflow-x: auto;
+    max-width: calc(100% - 600px);
+    min-width: 300px;
 }
 
 #main-content .content-feed{
-	overflow-y: auto;
-    max-height: 425px;
 	padding: 0 4em;
 	padding-right: 2.5em;
+/*    max-height: 425px;*/
+    min-width: 208px;
+/*	overflow-y: auto;*/
 }
 
 #main-content .content-feed .content-wrapper{
@@ -346,6 +348,7 @@ header{
 
 #main-content .content-feed .content-wrapper .activity-icon i.fa{
 	font-size: 1em;
+    padding: 0px 15px;
 }
 
 #main-content .content-feed .content-wrapper .activity-wrapper{
@@ -353,18 +356,26 @@ header{
 }
 
 #main-content .content-feed .content-wrapper .activity p{
-	color: #aaa;
+/*	color: #aaa;*/
+    color: #7e7c7c;
+}
+
+#main-content .infoData{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-right:1em;
 }
 
 #sidebar{
 	position: fixed;
 	z-index: 998;
-	right: 0;
-	min-width: calc(100% - 450px - 418px);
-	max-height: 485px;
-    overflow-x: auto;
-    overflow-y: auto;
+/*	right: 0;*/
+/*    width: 50%;*/
+/*	max-height: 485px
+/*	width: calc(100% - 450px - 418px);*/
 	border-left: thin solid #ddd;
+    width: 100%;
 }
 
 #sidebar .action-title{
@@ -374,10 +385,24 @@ header{
 
 #quick-view{
 	padding: 1.5em 2.1em;
+/*    height: 100%;*/
+/*    height: 400px;*/
+/*    overflow-y: auto;*/
+    min-height: 350px;
+    width: 600px;
+    max-width: calc(100% - calc(100% - 600px));
+    overflow-y: auto;
 }
 
 #quick-view .info{
 	padding: 0.8em 0;
+}
+
+#quick-view .infoData{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-right:1em;
 }
 
 #quick-view h4{
